--- a/DesignerRHN/DesignerRHN-war/web/EmplVacaPendiente.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplVacaPendiente.xhtml
@@ -38,15 +38,20 @@
                                 </p:column>
                                 <p:column headerText="#{msg['estado']}" style="padding: 0;"  filterMatchMode="contains" id="vacacionesEstado" width="70" filterStyle="display: none; visibility: hidden;" >                                  
 
-                                    <p:selectOneMenu id="editarEstado" value="#{info.estado}" style="width: 99%; font-weight: bold;text-transform: uppercase; height: 12px">  
-                                        <f:selectItem itemLabel="#{msg['cerrado']}" itemValue="CERRADO" />  
-                                        <f:selectItem itemLabel="#{msg['abierto']}" itemValue="ABIERTO" /> 
-                                        <p:ajax event="change" listener="#{controlEmplVacaPendiente.modificacionesTablas()}" update="editarEstado"/>
-                                    </p:selectOneMenu>
 
-                                    <f:facet name="footer">
-                                        <h:outputText value="#{msg['estado']}" />
-                                    </f:facet>
+                                    <p:cellEditor>   
+                                        <f:facet name="output"><h:outputText value="#{info.estado}" style="text-transform: uppercase" /></f:facet>  
+                                        <f:facet name="input">
+                                            <p:selectOneMenu id="editarEstado" value="#{info.estado}" style="width: 99%; font-weight: bold;text-transform: uppercase; height: 18px; border-radius: 0px">  
+                                                <f:selectItem itemLabel="#{msg['cerrado']}" itemValue="CERRADO" />  
+                                                <f:selectItem itemLabel="#{msg['abierto']}" itemValue="ABIERTO" /> 
+                                                <p:ajax event="change" listener="#{controlEmplVacaPendiente.modificacionesTablas()}" update="editarEstado"/>
+                                            </p:selectOneMenu>
+                                        </f:facet>
+                                        <f:facet name="footer">
+                                            <h:outputText value="#{msg['estado']}" />
+                                        </f:facet>
+                                    </p:cellEditor>
                                 </p:column>
 
                                 <p:column  headerText="#{msg['dp']}" sortBy="#{info.diaspendientes}" filterBy="#{info.diaspendientes}" filterMatchMode="contains" id="vacacionesDP" width="50" filterStyle="display: none; visibility: hidden;" >                                  
@@ -250,7 +255,7 @@
 
 
                     </p:panel>
-                    
+
                     <p:dialog id="confirmarGuardar" header="#{msg['atencion']}" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="85" width="425" closable="false">  
                         <h:graphicImage value="Imagenes/alerta.jpg" width="75" height="60" style="position: absolute; left: 30px; top: 10px;"  />
                         <h:outputText value="#{msg['cambiosRealizados']}" style="position: absolute; left: 120px; top: 20px; width: 250px; font-weight:bold;" />
@@ -368,7 +373,7 @@
                         <p:inputTextarea value="#{controlEmplVacaPendiente.editarVacacion.diaspendientes}" style="overflow: auto; width: 200px; height: 40px" readonly="true"/>
                     </p:dialog>
 
-                    <p:dialog id="NuevoRegistroVP" header="#{msg['nuevoregistroVP']}" widgetVar="NuevoRegistroVP" closable="false" resizable="false"  draggable="false" modal="true" height="200" width="430" style=" padding: 0px">  
+                    <p:dialog id="NuevoRegistroVP" header="#{msg['nuevoregistroVP']}" widgetVar="NuevoRegistroVP" closable="false" resizable="false"  draggable="false" modal="true" height="210" width="360" style=" padding: 0px">  
 
                         <center><strong><h:outputText value="#{msg['ingresarnuevoVP']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
@@ -383,32 +388,32 @@
                             </p:selectOneMenu>
 
                             <strong><h:outputText value="#{msg['diaspendientesVP']}" style=" position: absolute; top: 90px;left: 55px" /></strong>
-                            <p:inputText value="#{controlEmplVacaPendiente.nuevaVacacion.diaspendientes}" id="nuevaDiasPendientes" style=" width: 122px; position: absolute; left: 200px; top: 85px;">
+                            <p:inputText value="#{controlEmplVacaPendiente.nuevaVacacion.diaspendientes}" id="nuevaDiasPendientes" style=" width: 93px; position: absolute; left: 200px; top: 85px;">
                                 <p:ajax event="change" update="nuevaDiasPendientes"/>
                             </p:inputText>
                             <p:watermark for="nuevaDiasPendientes" value="#{msg['diaspendientesVDX']}" />
 
-                            <strong><h:outputText value="#{msg['fechainicialVP']}" style=" position: absolute; top: 120px; left: 50px;" /></strong>
+                            <strong><h:outputText value="#{msg['fechainicialVP']}" style=" position: absolute; top: 120px; left: 55px;" /></strong>
                             <div id="posicionFormulaFechaIniNuevoRegP" style=" position: absolute; top: 115px; left: 200px">
                                 <lnk:calendar id="nuevaFechaInicialP" value="#{controlEmplVacaPendiente.nuevaVacacion.inicialcausacion}" >
                                     <p:ajax event="dateSelect" update="nuevaFechaInicialP" process="@this"/>
                                     <p:ajax event="change" update="nuevaFechaInicialP" process="@this"/>
                                 </lnk:calendar>
                             </div>
-                            <strong><h:outputText value="#{msg['fechafinalVP']}" style=" position: absolute; top: 150px; left: 50px;" /></strong>
+                            <strong><h:outputText value="#{msg['fechafinalVP']}" style=" position: absolute; top: 150px; left: 55px;" /></strong>
                             <div id="posicionFormulaFechaFinNuevoRegP" style=" position: absolute; top: 145px; left: 200px">
                                 <lnk:calendar id="nuevaFechaFinalP" value="#{controlEmplVacaPendiente.nuevaVacacion.finalcausacion}" >
                                     <p:ajax event="dateSelect" update="nuevaFechaFinalP" process="@this"/>
                                     <p:ajax event="change" update="nuevaFechaFinalP" process="@this"/>
                                 </lnk:calendar>
                             </div>
-                            <p:commandButton id="limpiarVP" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 180px;" actionListener="#{controlEmplVacaPendiente.limpiarNuevoRegistro()}" update="nuevaVP" process="@this"/>
-                            <p:commandButton id="agregarVP" value="#{msg['agregar']}" style=" position: absolute; left: 240px; top: 180px;"  actionListener="#{controlEmplVacaPendiente.validarNuevoRegistroPendientes()}" process="@this" />
-                            <p:commandButton id="cancelarVP" value="#{msg['cancelar']}" style=" position: absolute; left: 310px; top: 180px;" actionListener="#{controlEmplVacaPendiente.limpiarNuevoRegistro()}" update="nuevaVP" onclick="NuevoRegistroVP.hide();"  process="@this"/>
+                            <p:commandButton id="limpiarVP" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 180px;" actionListener="#{controlEmplVacaPendiente.limpiarNuevoRegistro()}" update="nuevaVP" process="@this" icon="ui-icon-trash"/>
+                            <p:commandButton id="agregarVP" value="#{msg['agregar']}" style=" position: absolute; left: 160px; top: 180px;"  actionListener="#{controlEmplVacaPendiente.validarNuevoRegistroPendientes()}" process="@this" icon="ui-icon-circle-check"/>
+                            <p:commandButton id="cancelarVP" value="#{msg['cancelar']}" style=" position: absolute; left: 250px; top: 180px;" actionListener="#{controlEmplVacaPendiente.limpiarNuevoRegistro()}" update="nuevaVP" onclick="NuevoRegistroVP.hide();" icon="ui-icon-circle-close"  process="@this"/>
                         </p:panel>
                     </p:dialog>
 
-                    <p:dialog id="DuplicarRegistroVP" header="#{msg['duplicarregistroVP']}" widgetVar="DuplicarRegistroVP" closable="false" resizable="false"  draggable="false" modal="true" height="210" width="430" style=" padding: 0px">  
+                    <p:dialog id="DuplicarRegistroVP" header="#{msg['duplicarregistroVP']}" widgetVar="DuplicarRegistroVP" closable="false" resizable="false"  draggable="false" modal="true" height="210" width="360"  style=" padding: 0px">  
 
                         <center><strong><h:outputText value="#{msg['ingresarnuevoVP']}" style="font-size: 14px; color: blue; position: relative; top: 10px" /></strong></center> 
 
@@ -423,19 +428,19 @@
                             </p:selectOneMenu>
 
                             <strong><h:outputText value="#{msg['diaspendientesVP']}" style=" position: absolute; top: 90px;left: 55px" /></strong>
-                            <p:inputText value="#{controlEmplVacaPendiente.duplicarVacacion.diaspendientes}" id="duplicarDiasPendientes" style=" width: 122px; position: absolute; left: 200px; top: 85px;">
+                            <p:inputText value="#{controlEmplVacaPendiente.duplicarVacacion.diaspendientes}" id="duplicarDiasPendientes" style="  width: 93px; position: absolute; left: 200px; top: 85px;">
                                 <p:ajax event="change" update="duplicarDiasPendientes"/>
                             </p:inputText>
                             <p:watermark for="duplicarDiasPendientes" value="#{msg['diaspendientesVDX']}" />
 
-                            <strong><h:outputText value="#{msg['fechainicialVP']}" style=" position: absolute; top: 120px; left: 50px;" /></strong>
+                            <strong><h:outputText value="#{msg['fechainicialVP']}" style=" position: absolute; top: 120px; left: 55px;" /></strong>
                             <div id="posicionFormulaFechaIniDuplicarRegP" style=" position: absolute; top: 115px; left: 200px">
                                 <lnk:calendar id="duplicarFechaInicialP" value="#{controlEmplVacaPendiente.duplicarVacacion.inicialcausacion}" >
                                     <p:ajax event="dateSelect" update="duplicarFechaInicialP" process="@this"/>
                                     <p:ajax event="change" update="duplicarFechaInicialP" process="@this"/>
                                 </lnk:calendar>
                             </div>
-                            <strong><h:outputText value="#{msg['fechafinalVP']}" style=" position: absolute; top: 150px; left: 50px;" /></strong>
+                            <strong><h:outputText value="#{msg['fechafinalVP']}" style=" position: absolute; top: 150px; left: 55px;" /></strong>
                             <div id="posicionFormulaFechaFinDuplicarRegP" style=" position: absolute; top: 145px; left: 200px">
                                 <lnk:calendar id="duplicarFechaFinalP" value="#{controlEmplVacaPendiente.duplicarVacacion.finalcausacion}" >
                                     <p:ajax event="dateSelect" update="duplicarFechaFinalP" process="@this"/>
@@ -443,9 +448,9 @@
                                 </lnk:calendar>
                             </div>
 
-                            <p:commandButton id="limpiarDVP" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 180px;"  update="duplicarVP" actionListener="#{controlEmplVacaPendiente.limpiarDuplicadoVacaPendiente()}" process="@this"/>
-                            <p:commandButton id="agregarDVP" value="#{msg['agregar']}" style=" position: absolute; left: 240px; top: 180px;" actionListener="#{controlEmplVacaPendiente.validarDuplicadoVacaPendientes()}" process="@this" />
-                            <p:commandButton id="cancelarDVP" value="#{msg['cancelar']}" style=" position: absolute; left: 310px; top: 180px;"  update="duplicarVP" actionListener="#{controlEmplVacaPendiente.limpiarDuplicadoVacaPendiente()}" onclick="DuplicarRegistroVP.hide();"  process="@this"/>
+                            <p:commandButton id="limpiarDVP" value="#{msg['limpiar']}" style=" position: absolute; left: 20px; top: 180px;"  update="duplicarVP" actionListener="#{controlEmplVacaPendiente.limpiarDuplicadoVacaPendiente()}" process="@this" icon="ui-icon-trash"/>
+                            <p:commandButton id="agregarDVP" value="#{msg['agregar']}" style=" position: absolute; left: 160px; top: 180px;" actionListener="#{controlEmplVacaPendiente.validarDuplicadoVacaPendientes()}" process="@this" icon="ui-icon-circle-check" />
+                            <p:commandButton id="cancelarDVP" value="#{msg['cancelar']}" style=" position: absolute; left: 250px; top: 180px;"  update="duplicarVP" actionListener="#{controlEmplVacaPendiente.limpiarDuplicadoVacaPendiente()}" onclick="DuplicarRegistroVP.hide();" icon="ui-icon-circle-close" process="@this"/>
 
                         </p:panel>
                     </p:dialog>
