--- a/DesignerRHN/DesignerRHN-war/web/Template.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/Template.xhtml
@@ -15,21 +15,28 @@
     </h:head>
 
     <h:body onload="iniciarScrollEmpleado();" >
-        <div id="left" style="position: absolute; left: 0px; top:0px; width: 220px; height: 600px; padding-left: 5px; padding-right: 5px; background-image: url(Imagenes/encabezadotemplate.png); background-size: 100% 100%; background-repeat: repeat;">
+        <div id="left" style="position: absolute; left: 0px; top:0px; width: 220px; height: 600px; padding-left: 5px; padding-right: 5px; background-image: url(Imagenes/Iconos/fondoizq.png); background-size: 100% 100%; background-repeat: repeat;">
             <ui:insert name="left">
                 <h:form>
                     <a href="https://www.nomina.com.co" target="_blank">
-                        <p:graphicImage value="Imagenes/Designer.png" alt="Logo Designer" style="height: 65px; "/>
+                        <p:graphicImage value="Imagenes/Iconos/Designer.png" alt="Logo Designer" style="width: 217px; position: relative; left: 3px; top: 7px;"/>
                     </a>
+                    <br/>
                     <br/>
                     <p:panel id="licencia" header="LICENCIA DE USO A:" style="width: 213px; box-shadow: 5px 5px 5px 0px rgba(0,12,92,1); padding: 0px; ">
                         <h:panelGrid columns="1" cellpadding="0" style="font-size: 10px; width: 100%; left: 0px; padding: 0px;">
-                            <center>
-                                <p:graphicImage  value="#{controlTemplate.logoEmpresa}" alt="Logo Empresa" style="width: 100%;"/>
-                                <h:outputText id="empresa"  style="font-weight: bold;" value="#{controlTemplate.detalleEmpresa.empresa.nombre}"/>
-                                <h:outputText id="nit"  style="font-weight: bold;" value="NIT: #{controlTemplate.detalleEmpresa.empresa.nit}"/>
-                                <h:outputText id="tel"  style="font-weight: bold;" value="TEL: #{controlTemplate.detalleEmpresa.telefono}"/>
-                            </center>
+                            <h:column>
+                                <center>
+                                    <p:graphicImage  value="#{controlTemplate.logoEmpresa}" alt="Logo Empresa" style="width: 100%;"/>
+                                    <br/>
+                                    <br/>
+                                    <h:outputText id="empresa"  style="font-weight: bold;" value="#{controlTemplate.detalleEmpresa.empresa.nombre}"/>
+                                    <br/>
+                                    <h:outputText id="nit"  style="font-weight: bold;" value="NIT: #{controlTemplate.detalleEmpresa.empresa.nit}"/>
+                                    <br/>
+                                    <h:outputText id="tel"  style="font-weight: bold;" value="TEL: #{controlTemplate.detalleEmpresa.telefono}"/>
+                                </center>
+                            </h:column>
                         </h:panelGrid>
                     </p:panel>
                     <br/>
@@ -39,18 +46,24 @@
                             <h:column>
                                 <center>
                                     <h:outputText value="#{controlTemplate.nombreUsuario}" style="font-weight: bold;"/>
+                                    <br/>
+                                    <br/>
+                                    <h:outputText value="Perfil" style="font-weight: bold;"/>
+                                    <br/>
+                                    <h:outputText value="#{controlTemplate.nombrePerfil}" style="font-weight: bold;"/>
                                 </center>
                             </h:column>
                         </h:panelGrid>
                     </p:panel>
                     <br/>
-                    <p:panel id="izperiodo" header="PERIODO EN EL TIEMPO" style="width: 213px; box-shadow: 5px 5px 5px 0px rgba(0,12,92,1); padding: 0px;">
-                        <h:panelGrid columns="1" cellpadding="0" style="font-size: 10px;">
-                            <center>
-                                <h:outputText id="fdesde"  style="font-weight: bold;" value="Fecha desde: #{controlTemplate.detalleEmpresa.empresa.nombre}"/>
-                                <h:outputText id="fhasta"  style="font-weight: bold;" value="Fecha hasta:  #{controlTemplate.detalleEmpresa.empresa.nit}"/>
-                                <h:outputText id="fcorte"  style="font-weight: bold;" value="Fecha corte: #{controlTemplate.detalleEmpresa.telefono}"/>
-                            </center>
+                    <p:panel id="izperiodo" header="PERIODO EN EL TIEMPO" style="width: 213px; box-shadow: 5px 5px 5px 0px rgba(0,12,92,1); padding: 0px; ">
+                        <h:panelGrid columns="2" cellpadding="0" style="font-size: 10px;">
+                            <h:outputText id="lfdesde" style="font-weight: bold; color: #14388B;" value="Fecha desde: "/>
+                            <h:outputText id="fdesde" style="font-weight: bold;" value="#{controlTemplate.fechaDesde}"/>
+                            <h:outputText id="lfhasta" style="font-weight: bold; color: #14388B;" value="Fecha hasta: "/>
+                            <h:outputText id="fhasta" style="font-weight: bold;" value="#{controlTemplate.fechaHasta}"/>
+                            <h:outputText id="lfcorte" style="font-weight: bold; color: #14388B;" value="Fecha corte: "/>
+                            <h:outputText id="fcorte" style="font-weight: bold;" value="#{controlTemplate.fechaCorte}"/>
                         </h:panelGrid>
                     </p:panel>
                     <br/>
@@ -69,17 +82,35 @@
                 <ui:insert name="banner">
                     <h:form>
                         <div>
-                            <a href="https://www.nomina.com.co/soporte/descargas/file/43-teamviewer3.html" target="_blank">
-                                <p:graphicImage value="Imagenes/Designer.png" alt="Logo Designer" style="left: 0px; height: 30px; "/>
+                            <a href="http://www.facebook.com/nominads" target="_blank">
+                                <p:graphicImage value="Imagenes/Iconos/rs_Facebook.png" alt="facebook" style="left: 0px; width: 20px; height: 20px; "/>
                             </a>
-                            <p:commandButton value="" style="background-image: url(Imagenes/Iconos/buscardb.png); background-size: 100% 100%; background-repeat: no-repeat; width: 90px; height: 30px; position: absolute; left: 790px;" actionListener="#{controlTemplate.cerrarSession()}" />
+                            <a href="https://plus.google.com/+nominads" target="_blank">
+                                <p:graphicImage value="Imagenes/Iconos/rs_GooglePlus.png" alt="googleplus" style="left: 0px; width: 20px; height: 20px; "/>
+                            </a>
+                            <a href="https://www.youtube.com/user/nominads" target="_blank">
+                                <p:graphicImage value="Imagenes/Iconos/rs_Youtube.png" alt="youtube" style="left: 0px; width: 20px; height: 20px; "/>
+                            </a>
+                            <a href="https://twitter.com/#!/NominaDesigner" target="_blank">
+                                <p:graphicImage value="Imagenes/Iconos/rs_Twitter.png" alt="twiter" style="left: 0px; width: 20px; height: 20px; "/>
+                            </a>
+                            <a href="https://www.linkedin.com/company/designer-software-limitada" target="_blank">
+                                <p:graphicImage value="Imagenes/Iconos/rs_LinkedIn.png" alt="linkedin" style="left: 0px; width: 20px; height: 20px; "/>
+                            </a>
+                            <a href="http://www.nomina.com.co/soporte/descargas/file/43-teamviewer3.html" target="_blank">
+                                <p:graphicImage value="Imagenes/Iconos/rs_Teamviewer.png" alt="teamviewer" style="left: 0px; width: 20px; height: 20px; "/>
+                            </a>
+                            <a href="tel:+5717475043" target="_blank">
+                                <p:graphicImage value="Imagenes/Iconos/rs_pbx.png" alt="celular" style="left: 0px; width: 20px; height: 20px; "/>
+                            </a>
+                            <p:commandButton value="" style="background-image: url(Imagenes/Iconos/cerrarSesion.png); background-size: 100% 100%; background-repeat: no-repeat; width: 90px; height: 30px; position: absolute; left: 790px;" actionListener="#{controlTemplate.cerrarSession()}" />
                         </div>
                     </h:form>
                 </ui:insert>
             </div>
             <div id="content" class="left_content">
                 <ui:insert name="body" />
-                <h:outputLabel style="position: absolute; left: 348px; top: 545px; width: 550px; font-size: 9px; font-weight: bold; color: #003382" 
+                <h:outputLabel style="position: absolute; left: 5px; top: 545px; width: 550px; font-size: 9px; font-weight: bold; color: #003382" 
                                value="Designer Software Ltda. - Su compa&ntilde;&iacute;a de Tecnolog&iacute;a y Consultor&iacute;a en N&oacute;mina y Talento Humano desde 1998"/>
             </div>
         </div>
